--- a/build.xml
+++ b/build.xml
@@ -1,4 +1,4 @@
-<project name="handball-anwesenheit" basedir="." default="main">
+<project name="handball-basisplugin" basedir="." default="main">
 
     <target name="clean">
         <delete file="${ant.project.name}.zip" />
@@ -7,7 +7,6 @@
     <target name="zip">
         <zip destfile="${ant.project.name}.zip">
         	<fileset dir="." includes="${ant.project.name}.php, classes/*" />
-            <!--fileset includesfile="${ant.project.name}.php" /-->
         </zip>
     </target>
 
